<resources>
    <string name="app_name">Schedule</string>

    <!--Панель инструментов (ActionBar)-->
    <string name="action_bar_title_schedule">Schedule</string>
    <string name="action_bar_title_about">About</string>
    <string name="action_bar_title_stations">Stations</string>
    <string name="action_bar_title_station_detail">Station detail</string>

    <!--Меню-->
    <string name="menu_item_schedule">Schedule</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_update_database">Update database</string>

    <!--Экран "Расписание" (ScheduleActivity)-->
    <string name="title_departure_station">Departure station</string>
    <string name="title_arrival_station">Arrival station</string>
    <string name="title_departure_date">Departure date</string>
    <string name="hint_choose_station">Choose station</string>
    <string name="hint_region">Region</string>
    <string name="hint_select_date">Select a date</string>

    <!--Экран "Подробно о станции"-->
    <string name="detail_stantion_title">Stantion</string>
    <string name="detail_address_title">Address</string>
    <string name="detail_city_title">City</string>
    <string name="detail_district_title">District</string>
    <string name="detail_country_title">Country</string>

    <!--Экран "О приложении"-->
    <string name="about_version">version: </string>
    <string name="about_copyright">2017, Sergey Kamyshov. All right reserved</string>

    <!--Сообщения об ошибках-->
    <string name="error_request_code_not_identified">Request code not identified: </string>

    <!--Другие сообщения-->
    <string name="msg_empty_list">List is empty</string>
</resources>
